--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-    color: red;
+    color: black;
     background-color: blue
     /*background-image: url(/../img/ocean.jpg);*/
     font-size: 30;
