--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@ Hangman
 </body>
 <footer>
     <div class="new_river"> 
-        Program created by Lisa Bowles
+        Program created by Tricia Hoover, Lisa Bowles and Kris Folds
         <br>
         New River Community and Technical College
     </div>
